@@ -1,12 +1,12 @@
 Package: lme4
-Version: 0.95-7
-Date: 2005-05-13
+Version: 0.95-8
+Date: 2005-05-19
 Title: Linear mixed-effects models using S4 classes
 Author: Douglas Bates <bates@stat.wisc.edu> and
 	Deepayan Sarkar <deepayan@stat.wisc.edu>
 Maintainer: Douglas Bates <bates@stat.wisc.edu>
 Description: Fit linear and generalized linear mixed-effects models.
-Depends: methods, R(>= 2.1.0), Matrix(>= 0.95-8), lattice
+Depends: methods, R(>= 2.1.0), Matrix(>= 0.95-10), lattice
 Imports: graphics, stats
 Suggests: mlmRev, latticeExtra
 SaveImage: no
